--- a/main.tex
+++ b/main.tex
@@ -54,6 +54,8 @@
 \newcommand{\inner}[1]{\langle #1\rangle}
 \newcommand{\norm}[1]{\|\| #1 \|\|}
 \newcommand{\jaco}[2]{\frac{\partial (#1)}{\partial {#2}}}
+\renewcommand{\o}{\text{ or }}
+\renewcommand{\a}{\text{ and }}
 \renewcommand\qedsymbol{$\blacksquare$}
 
 \title{Undergraduate Mathematics}
