--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,9 @@
 \newtheorem{prop}{Proposition}
 \newtheorem*{ax*}{Axiom}
 \newtheorem{ax}{Axiom}
+\newtheorem*{prin*}{Principle}
+\newtheorem{prin}{Principle}
+
 
 \newcommand{\set}[1]{\{#1\}}
 \newcommand{\R}{\mathbb{R}}
